<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Market App</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>

    <!-- Start Screen -->
    <string name="startScreenMessage">What would you like to enter as?</string>
    <string name="welcomeMessage">Welcome to Market App!</string>

    <!-- Activities -->
    <string name="client">Client</string>
    <string name="clerk">Clerk</string>

    <!-- Details -->
    <string name="price">Price</string>
    <string name="status">Status</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>

    <!-- Client List -->
    <string name="buy">Buy</string>
    <string name="how_many">How many:</string>
    <string name="transition_name_format">%d-%s</string>

    <!-- Empty Layout -->
    <string name="error_retry">Retry</string>
    <string name="no_results">No results</string>

    <!-- Clerk List -->
    <string name="price_tag">$%d</string>
    <string name="delete">Delete</string>
</resources>
