<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginBottom="75dp"
                card_view:cardCornerRadius="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:paddingStart="16dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="10dp"
                    tools:ignore="RtlSymmetry">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameInput"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/descriptionInput"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/nameInput">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/descriptionEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/quantityInput"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/quantity"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/descriptionInput">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/quantityEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/priceInput"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/price"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/quantityInput">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/priceEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/statusInput"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/status"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/priceInput">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/statusEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.example.manciu.marketapp.utils.EmptyLayout
                android:id="@+id/addEmptyLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/confirmButton"
        android:layout_width="@dimen/floating_action_button_size"
        android:layout_height="@dimen/floating_action_button_size"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/floating_action_button_margin"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_check"
        android:tint="?attr/colorPrimaryDark"
        app:backgroundTint="?attr/colorPrimary"
        app:elevation="@dimen/floating_action_button_elevation"
        app:maxImageSize="@dimen/floating_action_button_image_size" />
</FrameLayout>